syntax = "proto3";
package cloud.pb;

option java_multiple_files = true;
option java_package = "io.textile.cloud_grpc";
option java_outer_classname = "TextileCloud";
option objc_class_prefix = "TXTL_CLOUD";

message LoginRequest {
    string username = 1;
    string email = 2;
}

message LoginReply {
    string ID = 1;
    string username = 2;
    string session = 3;
}

message LogoutRequest {}

message LogoutReply {}

message WhoamiRequest {}

message WhoamiReply {
    string ID = 1;
    string username = 2;
    string email = 3;
}

message AddOrgRequest {
    string name = 1;
}

message GetOrgRequest {}

message GetOrgReply {
    string ID = 1;
    string name = 2;
    string dbID = 3;
    repeated Member members = 4;
    int64 createdAt = 5;

    message Member {
        string ID = 1;
        string username = 2;
        string role = 3;
    }
}

message ListOrgsRequest {}

message ListOrgsReply {
    repeated GetOrgReply list = 1;
}

message RemoveOrgRequest {}

message RemoveOrgReply {}

message InviteToOrgRequest {
    string email = 1;
}

message InviteToOrgReply {
    string session = 1;
}

message LeaveOrgRequest {}

message LeaveOrgReply {}

service API {
    rpc Login(LoginRequest) returns (LoginReply) {}
    rpc Logout(LogoutRequest) returns (LogoutReply) {}
    rpc Whoami(WhoamiRequest) returns (WhoamiReply) {}

    rpc AddOrg (AddOrgRequest) returns (GetOrgReply) {}
    rpc GetOrg (GetOrgRequest) returns (GetOrgReply) {}
    rpc ListOrgs (ListOrgsRequest) returns (ListOrgsReply) {}
    rpc RemoveOrg (RemoveOrgRequest) returns (RemoveOrgReply) {}
    rpc InviteToOrg (InviteToOrgRequest) returns (InviteToOrgReply) {}
    rpc LeaveOrg (LeaveOrgRequest) returns (LeaveOrgReply) {}
}
